--- a/Notes/.obsidian/workspace
+++ b/Notes/.obsidian/workspace
@@ -7,12 +7,8 @@
         "id": "4398a5fdd92e2d02",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Untitled.md",
-            "mode": "source",
-            "source": false
-          }
+          "type": "graph",
+          "state": {}
         }
       }
     ],
@@ -69,13 +65,23 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Untitled.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
                 "showSearch": false,
                 "searchQuery": "",
                 "backlinkCollapsed": false,
+                "unlinkedCollapsed": false
+              }
+            }
+          },
+          {
+            "id": "4fdfca2545b947eb",
+            "type": "leaf",
+            "state": {
+              "type": "outgoing-link",
+              "state": {
+                "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
             }
@@ -84,11 +90,19 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300,
-    "collapsed": true
+    "width": 300
   },
   "active": "4398a5fdd92e2d02",
   "lastOpenFiles": [
-    "Untitled.md"
+    "People/Nobuske.md",
+    "Times/Day 1.md",
+    "Things/Nobuske's Threat.md",
+    "Places/Wadayama.md",
+    "Places/Unusual house.md",
+    "Places/Supermarket.md",
+    "Places/School.md",
+    "Places/My flat.md",
+    "Places/Mayor's Office.md",
+    "Places/Apartment.md"
   ]
 }
