--- a/Notes/.obsidian/workspace
+++ b/Notes/.obsidian/workspace
@@ -4,16 +4,55 @@
     "type": "split",
     "children": [
       {
-        "id": "fec5373b7d32948b",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Places/Apartment.md",
-            "mode": "source",
-            "source": false
+        "id": "117a22618836dce4",
+        "type": "split",
+        "children": [
+          {
+            "id": "f311c0e93a685bd5",
+            "type": "leaf",
+            "dimension": 64.4803229061554,
+            "state": {
+              "type": "empty",
+              "state": {}
+            }
+          },
+          {
+            "id": "d54616a4e267b5d2",
+            "type": "leaf",
+            "dimension": 35.51967709384461,
+            "state": {
+              "type": "localgraph",
+              "state": {
+                "options": {
+                  "collapse-filter": true,
+                  "search": "",
+                  "localJumps": 2,
+                  "localBacklinks": true,
+                  "localForelinks": true,
+                  "localInterlinks": false,
+                  "showTags": false,
+                  "showAttachments": false,
+                  "hideUnresolved": false,
+                  "collapse-color-groups": true,
+                  "colorGroups": [],
+                  "collapse-display": true,
+                  "showArrow": true,
+                  "textFadeMultiplier": 0,
+                  "nodeSizeMultiplier": 1,
+                  "lineSizeMultiplier": 1,
+                  "collapse-forces": true,
+                  "centerStrength": 0.518713248970312,
+                  "repelStrength": 10,
+                  "linkStrength": 1,
+                  "linkDistance": 250,
+                  "scale": 0.6989606412938217,
+                  "close": false
+                }
+              }
+            }
           }
-        }
+        ],
+        "direction": "horizontal"
       }
     ],
     "direction": "vertical"
@@ -40,7 +79,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "kyoto",
+                "query": "igaras",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -69,7 +108,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Places/Apartment.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,30 +124,28 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Places/Apartment.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
             }
           }
-        ],
-        "currentTab": 1
+        ]
       }
     ],
     "direction": "horizontal",
-    "width": 334.5
+    "width": 343.5
   },
-  "active": "fec5373b7d32948b",
+  "active": "f311c0e93a685bd5",
   "lastOpenFiles": [
-    "Places/Camping site.md",
-    "Places/Hospital.md",
-    "Places/Izakaya.md",
-    "Places/Kagamihara Yuma.md",
-    "Places/Main road.md",
-    "Places/Mayor's Office.md",
-    "Places/Mansion.md",
-    "Places/Mt Hakkai.md",
-    "Places/Mt Hakkai Road.md",
-    "Places/My flat.md"
+    "Untitled 1.md",
+    "Meta/Inari.md",
+    "Places/Businesses/Mayor's Office.md",
+    "Places/Housing/My flat.md",
+    "People/Players/Tadashi Hamada.md",
+    "People/Players/Mike Bequith.md",
+    "People/At North of town/Inoue.md",
+    "Places/Housing/Igarashi Mansion.md",
+    "Places/Housing/Kamada Residence.md",
+    "Places/Housing/Fujiwara Residence.md"
   ]
 }
